crates/kaban-parser/tests/snapshots/statements__let_statement_with_no_type.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: let x = 10 + 5;

Block [
    Let {
        name: IdentifierBinding {
            name: Identifier("x"),
            mutable: false,
        },
        assignment: Add {
            left: IntLit("10"),
            right: IntLit("5"),
        },
    },
]
