crates/kaban-parser/tests/snapshots/statements__let_with_nested_tuple_destructure_and_mutable_elements.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: let ((mut ax, ay,), mut b) = ((10, foo()), 10.5);

Block [
    Let {
        name: TupleDestructure [
            TupleDestructure [
                IdentifierBinding {
                    name: Identifier("ax"),
                    mutable: true,
                },
                IdentifierBinding {
                    name: Identifier("ay"),
                    mutable: false,
                },
            ],
            IdentifierBinding {
                name: Identifier("b"),
                mutable: true,
            },
        ],
        assignment: TupleLit [
            TupleLit [
                IntLit("10"),
                FuncCall {
                    callee: Identifier("foo"),
                    args: [],
                },
            ],
            FloatLit("10.5"),
        ],
    },
]
