crates/kaban-parser/tests/snapshots/statements__let_with_string_literal.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: let x = "hello";

Block [
    Let {
        name: IdentifierBinding {
            name: Identifier("x"),
            mutable: false,
        },
        assignment: StringLit("\"hello\""),
    },
]
