crates/kaban-parser/tests/snapshots/statements__let_with_true_literal.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: print
---
input: let x = true;

Block [
    Let {
        name: IdentifierBinding {
            name: Identifier("x"),
            mutable: false,
        },
        assignment: TrueLit("true"),
    },
]
