crates/kaban-parser/tests/snapshots/statements__let_with_tuple_destructure.snap
---
source: crates/kaban-parser/tests/statements.rs
expression: "format! (\"input: {}\\n\\n{:#?}\", input, ast.to_debugger())"
---
input: let (x, y) = (10, 10.5);

Block [
    Let {
        name: TupleDestructure [
            IdentifierBinding {
                name: Identifier("x"),
                mutable: false,
            },
            IdentifierBinding {
                name: Identifier("y"),
                mutable: false,
            },
        ],
        assignment: TupleLit [
            IntLit("10"),
            FloatLit("10.5"),
        ],
    },
]
